# foundation-models-perturbation

./: .gitignore  0521_170ep_metadata.tsv  pyproject.toml
benchmark/: fig_A5_restricted.ipynb  pyproject.toml
benchmark/benchmark/: download_data.ipynb
benchmark/benchmark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
benchmark/train/: state.json  (+1 more)
chemical_embedding_pipeline/: COVERAGE.md  HANDOFF.md  README.md  __init__.py  audit_lfc_score_coverage.py  check_coverage.py  compounds_to_h5ad.py  download_hf_checkpoints.py  download_temp_hf_datasets.py  env.py  general_lfc_eval.py  generate_dataset_compound_embeddings.py  generate_lfc_embeddings.py  generate_metadata_embeddings.py  generate_minimol_embeddings.py  generate_molfeat_embeddings.py  generate_openai_embeddings.py  generate_pretrained_molfeat_embeddings.py  generate_pubchem_embeddings.py  generate_random_embeddings.py  generate_transformer_embeddings.py  merge_embedding_h5ads.py  prepare_hf_dge_lfc_h5ad.py  progress.py  run_fixed_lfc_eval.py  run_l1000_lfc_eval.py  run_reproducibility_suite.py  setup_embedding_envs.py  smoke_test.py  verify_embeddings.py
lpm_paper10_ft_morgan_learned_fixmol_best_embeddings/: best_checkpoint_embedding_exports.tsv  heldout_molecules.tsv  manifest.json
molecule_embeddings/:  explore_embeddings.ipynb  tahoe_PCA_emb.pkl  tahoe_sci_op3_updated.pkl.pre-epoch19
no_tahoe_embeddings/: tahoe_sci_op3_no_tahoe_embeddings.pkl  tahoe_sci_op3_no_tahoe_embeddings_coverage.csv
scripts/: collect_heldout_lfc_results.py  generate_heldout_lfc_score_files.sh  plot_heldout_lfc_results.py
(+15872 files in other folders)
